Add purple balloon to js.

--- a/easy.html
+++ b/easy.html
@@ -17,8 +17,9 @@
         <img id="red-heart-balloon" src="assets/images/balloon-heart-red.png" alt="red heart balloon">
         <img id="blue-balloon" src="assets/images/balloon-blue.png" alt="blue balloon">
         <img id="yellow-balloon" src="assets/images/balloon-yellow.png" alt="yellow balloon">
-        <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon">
-        <img id="pink-balloon" src="assets/images/balloon-pink.png" alt="pink-balloon">
+        <img id="green-balloon" src="assets/images/balloon-green.png" alt="green balloon">
+        <img id="pink-balloon" src="assets/images/balloon-pink.png" alt="pink balloon">
+        <img id="purple-balloon" src="assets/images/balloon-purple.png" alt="purple balloon">
         <section>
             <!--View form displaying player nickname and score-->
             <div class="display-container">
