Add major modification to remove verbose.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <option value="true">Sound On</option>
                     </select>
                     <!--start game button-->
-                        <button onclick="saveSoundOption()" type="submit" id="start-button"
+                        <button onclick="saveSoundOption(); saveLevelOption();" type="submit" id="start-button"
                             aria-label="click to start game">Start Game</button>
                 </form>
             </div>
