Fix console errors.

--- a/easy.html
+++ b/easy.html
@@ -12,7 +12,7 @@
 
 <body id="body-game">
     <main>
-        <!--ballon images source http: //www.clipartbest.com/free-balloon-png-art-->
+        <!--ballon images source http: //www.clipartbest.com/free-balloon-png-art; scores on balloons added by web developer Jalal Semaan-->
         <img id="red-balloon" src="assets/images/balloon-red.png" alt="red balloon">
         <img id="red-heart-balloon" src="assets/images/balloon-heart-red.png" alt="red heart balloon">
         <img id="blue-balloon" src="assets/images/balloon-blue.png" alt="blue balloon">
@@ -43,7 +43,7 @@
         <audio id="pop-negative" src="assets/audio/negative_beeps.mp3" aria-label="Error sound"></audio>
         <!--Link to javascript-->
         <script src="assets/js/script.js"></script>
-        
+
     </main>
 </body>
 
