Fix js console  error for nickname.

--- a/hard.html
+++ b/hard.html
@@ -24,7 +24,7 @@
             <!--View form displaying player nickname and score-->
             <div class="display-container">
                 <form class="form-levels" id="game-form" action="game.html">
-                    <label aria-label="Player nickname"><span id="nickname-display"></span></label>
+                    <label aria-label="Player nickname"><span id="nickname"></span></label>
                     <label aria-label="Difficulty hard">Hard Level</label>
                     <label id="score-label" aria-label="Player score"></label>
                 </form>
