--- a/404.html
+++ b/404.html
@@ -18,7 +18,10 @@
             <div class="instructions">
                 <h1 class="blackout">404 Page Not Found!</h1>
                 <br>
-                <button id="home-btn" aria-label="Home button">Home</button>
+                <div class="return-home-container">
+                    <a href="index.html" class="return-button" aria-label="home page">
+                        HOME</a>
+                </div>
             </div>
         </section>
     </main>
