--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Balloon popper game for kids.">
+    <meta name="keywords"
+        content="kids game, balloon popper game, game coding, html game, css game, javascript game, Dublin, Ireland">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/images/parabim-favicon.png">
     <title>Balloon Popper Game</title>
@@ -28,7 +30,7 @@
                     Alternatively click the red heart balloon and two points will be added to your score.
                     <br>
                     <br>
-                    Good luck and have fun playing 
+                    Good luck and have fun playing
                     <br>
                     "Balloon Popper"!
                 </p>
@@ -50,8 +52,8 @@
                         <option value="true">Sound On</option>
                     </select>
                     <!--start game button-->
-                        <button onclick="saveSoundOption(); saveLevelOption();" type="submit" id="start-button"
-                            aria-label="click to start game">Start Game</button>
+                    <button onclick="saveSoundOption(); saveLevelOption();" type="submit" id="start-button"
+                        aria-label="click to start game">Start Game</button>
                 </form>
             </div>
         </section>
