--- a/medium.html
+++ b/medium.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Balloon popper game for kids.">
+    <meta name="keywords"
+        content="kids game, balloon popper game, game coding, html game, css game, javascript game, Dublin, Ireland">
     <link rel="icon" type="image/x-icon" href="assets/images/parabim-favicon.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Balloon Popper Game</title>
