--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
             <!--welcome note and game instructions-->
             <div class="instructions">
                 <h1 class="blackout">404 Page Not Found!</h1>
-                <p class="blackout"> The page you are looking does not exist.
+                <p class="blackout"> The page you are looking for does not exist.
                     <br>
                     Please click below to go back to our home page.
                 </p>
