--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 <body id="body-index">
     <main>
         <section aria-label="error note page not found">
-            <!--welcome note and game instructions-->
+            <!--404 error note-->
             <div class="instructions">
                 <h1 class="blackout">404 Page Not Found!</h1>
                 <p class="blackout"> The page you are looking for does not exist.
@@ -28,7 +28,7 @@
         <section>
             <div class="form-container">
                 <form id="game-form" action="game.html">
-                    <!--start game button-->
+                    <!--home button-->
                     <a href="index.html" id="error-home" aria-label="home page">
                         HOME</a>
                 </form>
