--- a/medium.html
+++ b/medium.html
@@ -15,7 +15,7 @@
 
 <body id="body-game">
     <main>
-        <!--ballon images source http: //www.clipartbest.com/free-balloon-png-art-->
+        <!--balloon images source http: //www.clipartbest.com/free-balloon-png-art; scores on balloons added by web developer Jalal Semaan-->
         <img id="red-balloon" src="assets/images/balloon-red.png" alt="red balloon">
         <img id="red-heart-balloon" src="assets/images/balloon-heart-red.png" alt="red heart balloon">
         <img id="blue-balloon" src="assets/images/balloon-blue.png" alt="blue balloon">
